tests/behavior/success/for_break1.bz
function main() -> i32
{
	for (let _ in 0..10)
	{
		break;
		return 1;
	}
	return 0;
}
