tests/behavior/error/null_pointer_arithmetic6.bz
function main()
{
	let p: ?*i32 = null;
	let _ = p - 1;
}
